--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "passport": "^0.3.2",
     "passport-auth0": "^0.6.0",
     "pug": "^2.0.0-rc.1",
-    "request": "^2.81.0"
+    "redis": "^2.7.1",
+    "request": "^2.81.0",
+    "socket.io": "^2.0.1",
+    "unix-timestamp": "^0.2.0"
   }
 }
