--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pug": "^2.0.0-rc.1",
     "redis": "^2.7.1",
     "request": "^2.81.0",
+    "shortid": "^2.2.8",
     "socket.io": "^2.0.1",
     "unix-timestamp": "^0.2.0"
   }
